2014-10-09  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.7 release procedure:
 	Changes since nco-4_4_6: -0->-1, rename bug
	cd ~/nco;cvs tag -d nco-4_4_7;cvs tag -d nco-4_4_7-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.7 release"
	cvs tag -c nco-4_4_7;cvs tag -c nco-4_4_7-1

	* Improve hdr_pad, ncrename documentation

2014-10-08  Charlie Zender  <zender@uci.edu>

	* Add NCO_VERSION for consistency with NC_VERSION

	* Document newly discovered ncrename problems due to netCDF4 bugs http://nco.sf.net/nco.html#bug_nc4_rename

	* Check more error return codes in ncrename.c. Verifies NCO does not ignore any netCDF errors.

2014-10-07  Charlie Zender  <zender@uci.edu>

	* Add regression checks for valid values in renamed coordinates in netCDF4 files

2014-10-02  Charlie Zender  <zender@uci.edu>

	* Change to real Python convention where -1 is last element, e.g., -2 is penultimate element, -N is first element

2014-10-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.6 release procedure:
 	Changes since nco-4_4_5: ncks -V, ncap2 -s -S, DAP cnf, ncra pck/mss/prm, HDF4, ncrename, NC4_SRD, -0
	cd ~/nco;cvs tag -d nco-4_4_6;cvs tag -d nco-4_4_6-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.6 release"
	cvs tag -c nco-4_4_6;cvs tag -c nco-4_4_6-1

	* Add negative zero syntax to select last element of hyperslab

2014-09-30  Charlie Zender  <zender@uci.edu>

	* Avoid void arithmetic in USE_NC4_SRD_WORKAROUND

	* Change important nco_calloc() to nco_malloc() for speed

	* Fix ncwa handling of packed variables for minimization/maximization

	* Implement strncasecmp() for Windows and MSVC compilers

	* Fix count bug in USE_NC4_SRD_WORKAROUND

2014-09-29  Charlie Zender  <zender@uci.edu>

	* Implement USE_NC4_SRD_WORKAROUND by default in all applicable	cases, i.e.,
	for singly strided hyperslab access to netCDCF4 files.

2014-09-26  Charlie Zender  <zender@uci.edu>

	* Implement workaround to nc_get_vars() slowdown for netCDF4 in netCDF library