@@ -1,10 +1,14 @@
-2014-10-09  Charlie Zender  <zender@uci.edu>
+2014-10-10  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.4.7 release procedure:
  	Changes since nco-4_4_6: -0->-1, rename bug
 	cd ~/nco;cvs tag -d nco-4_4_7;cvs tag -d nco-4_4_7-1
 	cd ~/nco;cvs commit -m "Preparing nco-4.4.7 release"
 	cvs tag -c nco-4_4_7;cvs tag -c nco-4_4_7-1
+
+	* Avoid nc_rename_var/dim() bug in netCDF4 files by avoiding nc_redef()/nc_enddef()
+
+2014-10-09  Charlie Zender  <zender@uci.edu>
 
 	* Improve hdr_pad, ncrename documentation
 
